--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   cloud_firestore: ^3.4.2
   cupertino_icons: ^1.0.2
+  file_picker: ^5.0.1
   firebase_auth: ^3.6.1
   firebase_core: ^1.20.0
   firebase_storage: ^10.3.4
