--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.3
   uuid: ^3.0.6
+  video_player: ^2.4.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
