--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   assets:
     - assets/images/backgroundimg.png
     - assets/images/taglinelogo.png
+    - assets/images/aspirant.png
+    - assets/images/guide.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
