--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   cloud_firestore: ^3.4.2
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   file_picker: ^5.0.1
   firebase_auth: ^3.6.1
   firebase_core: ^1.20.0
@@ -37,6 +38,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.5+3
   intl: ^0.17.0
+  path_provider: ^2.0.11
   provider: ^6.0.3
   uuid: ^3.0.6
   video_player: ^2.4.6
