--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   firebase_storage: ^10.3.4
   flutter:
     sdk: flutter
+  flutter_downloader: ^1.8.1
   image_picker: ^0.8.5+3
   intl: ^0.17.0
   path_provider: ^2.0.11
+  permission_handler: ^10.0.0
   provider: ^6.0.3
   uuid: ^3.0.6
   video_player: ^2.4.6
