--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   path_provider: ^2.0.11
   provider: ^6.0.3
+  syncfusion_flutter_pdfviewer: ^20.2.43-beta
   uuid: ^3.0.6
   video_player: ^2.4.6
 
@@ -62,6 +63,8 @@ flutter:
   assets:
     - assets/images/backgroundimg.png
     - assets/images/taglinelogo.png
+    - assets/images/guide.png
+    - assets/images/aspirant.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,6 +79,9 @@ flutter:
     - family: ananias
       fonts:
         - asset: assets/fonts/Ananias.ttf
+    - family: quick
+      fonts:
+        - asset: assets/fonts/Quicksand-Light.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
